--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://ananduser:anandpass@cluster0.pzuin.mongodb.net/todo-manage-api?retryWrites=true&w=majority
+server.port=8080
